@fix: build error during github action
-add rollup dependency for github action

--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "tailwindcss-text-fill-stroke": "^1.1.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
