--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "tailwindcss": "^3.4.3",
     "tailwindcss-text-fill-stroke": "^1.1.2",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-sitemap": "^0.6.2"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.6.1"
